<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ActionOverlayView">
            <rect key="frame" x="0.0" y="0.0" width="186" height="47"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BZP-F5-56c">
                    <rect key="frame" x="8" y="8" width="53" height="30"/>
                    <accessibility key="accessibilityConfiguration" label="Test Add Action Button"/>
                    <state key="normal" title="+Action"/>
                    <connections>
                        <action selector="onAddAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="xNf-OK-RK9"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hRh-4V-vrd">
                    <rect key="frame" x="69" y="8" width="51" height="30"/>
                    <accessibility key="accessibilityConfiguration" label="Test Remove Action Button"/>
                    <state key="normal" title="-Action"/>
                    <connections>
                        <action selector="onRemoveAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="R3a-Y6-wEZ"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bic-Bq-n8L">
                    <rect key="frame" x="128" y="8" width="50" height="30"/>
                    <accessibility key="accessibilityConfiguration" label="Test Remove Group Button"/>
                    <state key="normal" title="-Group"/>
                    <connections>
                        <action selector="onRemoveGroup:" destination="iN0-l3-epB" eventType="touchUpInside" id="E1s-6J-det"/>
                    </connections>
                </button>
            </subviews>
            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
            <constraints>
                <constraint firstItem="hRh-4V-vrd" firstAttribute="leading" secondItem="BZP-F5-56c" secondAttribute="trailing" constant="8" id="qOl-Cc-AET"/>
                <constraint firstItem="Bic-Bq-n8L" firstAttribute="centerY" secondItem="hRh-4V-vrd" secondAttribute="centerY" id="tcc-Sh-Dtq"/>
                <constraint firstItem="BZP-F5-56c" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="toV-O4-OYG"/>
                <constraint firstItem="Bic-Bq-n8L" firstAttribute="leading" secondItem="hRh-4V-vrd" secondAttribute="trailing" constant="8" id="u6C-O7-b7M"/>
                <constraint firstItem="BZP-F5-56c" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="xEK-gx-yyH"/>
                <constraint firstItem="hRh-4V-vrd" firstAttribute="centerY" secondItem="BZP-F5-56c" secondAttribute="centerY" id="z6G-8S-6Uv"/>
            </constraints>
            <nil key="simulatedStatusBarMetrics"/>
            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
            <point key="canvasLocation" x="-10" y="-430.5"/>
        </view>
    </objects>
</document>
