...
                        <constraint firstAttribute="height" constant="20" id="pgQ-Me-QmY"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    <nil key="highlightedColor"/>
                </label>
                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kwy-j4-dCD" userLabel="No Actions Warning View">
                    <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                    <subviews>
                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aiV-SI-LFD" userLabel="Container">
                            <rect key="frame" x="0.0" y="190" width="600" height="200"/>
                            <subviews>
                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lunar_console_actions_empty_warning.png" translatesAutoresizingMaskIntoConstraints="NO" id="dGG-61-ZsJ">
...
                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    <connections>
                        <outlet property="dataSource" destination="-1" id="pCv-24-uaF"/>
                        <outlet property="delegate" destination="-1" id="Wwa-3H-gpP"/>
                    </connections>
                </tableView>
                <searchBar contentMode="redraw" barStyle="black" placeholder="Filter" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vKS-zo-ZIz">
                    <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="44" id="Z1T-w0-kvT"/>
                    </constraints>
                    <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                    <textInputTraits key="textInputTraits"/>
...
