...
#pragma mark Input

- (void)showInputControllerWithMessage:(NSString *)message callback:(InputCallback)callback
{
    AlertView *alertView = [[AlertView alloc] initWithTitle:@"Lunar"
                                                    message:message
                                              okButtonTitle:@"Ok"
                                                 completion:^(AlertView *alertView, NSInteger buttonIndex) {
        if (buttonIndex == 0)
        {
            NSString *input = [alertView textFieldAtIndex:0].text;
            if (callback)
            {
...
