...
                                <connections>
                                    <action selector="onSetTrim:" destination="BYZ-38-t0r" eventType="touchUpInside" id="q40-8a-QTB"/>
                                </connections>
                            </button>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2or-L4-Y3u">
                                <rect key="frame" x="20" y="121" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" label="Test Action Overlay Switch"/>
                                <connections>
                                    <action selector="onToggleOverlaySwitch:" destination="BYZ-38-t0r" eventType="valueChanged" id="Fj6-MO-Spc"/>
                                </connections>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Actions overlay" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ghp-36-lXD">
                                <rect key="frame" x="77" y="126" width="116.5" height="20.5"/>
...
